fix overflow bug

--- a/src/sass/media-query.scss
+++ b/src/sass/media-query.scss
@@ -54,9 +54,10 @@
         #projects{
           .grid-container{
             .flex-container{
+              margin-inline: 16px;
               .project{
 
-                min-width: 480px;
+                min-width: 460px;
 
                 .description{
                   margin-inline-start: 1rem;
@@ -193,19 +194,22 @@
           z-index: 1;
 
           .btn-cv{
+            position: absolute;
+            top: 0%;
+            left: 0%;
             margin-block-start: 1rem;
-            margin-inline-start: 1.5rem;
-            
+            margin-inline-start: 1rem;
+
           }
         }
 
         img{
-          position: absolute;
-          bottom: 0%;
-          right: 0%;
           transform: translate(18%, 0%) scaleX(-1);
-          height: 48%;
+          height: 95%;
           z-index: 0;
+          align-self: flex-end;
+          margin-inline-start: auto;
+          margin-inline-end: 0;
         }
       }
     }
@@ -260,9 +264,12 @@
 
         .flex-container{
           flex-basis: 100%;
+          margin-inline: 0;
 
           .project{
             min-width: 95vw;
+
+            max-width: 95vw;
 
             .repo{
               grid-column: 1/-1;
